@startuml

title __APP's Class Diagram__\n

  namespace com.cleanup.todoc {
    class com.cleanup.todoc.BuildConfig {
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      interface com.cleanup.todoc.database.RoomDao {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      class com.cleanup.todoc.database.RoomDao_Impl {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      abstract class com.cleanup.todoc.database.RoomDatabase {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace database {
      class com.cleanup.todoc.database.RoomDatabase_Impl {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Project {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace model {
      class com.cleanup.todoc.model.Task {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.MainActivity {
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace ui {
      class com.cleanup.todoc.ui.TasksAdapter {
      }
    }
  }
  

  com.cleanup.todoc.database.RoomDao_Impl .up.|> com.cleanup.todoc.database.RoomDao
  com.cleanup.todoc.database.RoomDatabase -up-|> androidx.room.RoomDatabase
  com.cleanup.todoc.database.RoomDatabase_Impl -up-|> com.cleanup.todoc.database.RoomDatabase
  com.cleanup.todoc.database.RoomDatabase_Impl o-- com.cleanup.todoc.database.RoomDao : _roomDao
  com.cleanup.todoc.ui.MainActivity .up.|> com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener
  com.cleanup.todoc.ui.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.TasksAdapter : adapter
  com.cleanup.todoc.ui.MainActivity o-- com.cleanup.todoc.ui.MainActivity.SortMethod : sortMethod
  com.cleanup.todoc.ui.TasksAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.cleanup.todoc.ui.TasksAdapter o-- com.cleanup.todoc.ui.TasksAdapter.DeleteTaskListener : deleteTaskListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
